modules/terraform-aws-network/vpc.tf
resource "aws_vpc" "item" {
  cidr_block           = var.vpc_cidr_block
  enable_dns_hostnames = true

  tags = merge(
    { "Name" = var.vpc_name },
    var.vpc_tags
  )
}
